--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ body {
     line-height: 1.4em;
     background: #0D58A6;
     color: #fefefe;
+    padding-top: 5px;
 }
 
 p {
@@ -82,7 +83,11 @@ $light-blue-color: #689CD2;
     padding: 0 0.3%;
 }
 
-header:after {
+.hide {
+    display: none;
+}
+
+header:after, [role=main]:after {
     content: "."; 
     visibility: hidden; 
     display: block; 
@@ -96,10 +101,15 @@ header:after {
     text-align: center;
     color: $white-color;
     display: block;
-    font-size: 2em;
-    height: 100px;
-    line-height: 100px;
+    font-size: 3em;
+    height: 80px;
+    line-height: 80px;
     text-decoration: none;
+    transition: color 0.5s ease;
+}
+
+#logo:hover {
+    color: $light-blue-color;
 }
 
 [role=menu] ul {
@@ -108,7 +118,7 @@ header:after {
     float: left;
     width: 25%;
     list-style: none;
-    height: 100px;
+    height: 80px;
 }
 
 [role=menu] ul:after { 
@@ -123,7 +133,7 @@ header:after {
     color: $white-color;
     text-decoration: none;
     font-size: 1em;
-    height: 25px;
+    line-height: 1.2em;
     display: block;
 }
 
@@ -137,7 +147,7 @@ ul.social {
     list-style: none;
     float: left;
     width: 25%;
-    height: 100px;
+    height: 80px;
     border-bottom: 1px solid $light-blue-color;
     border-left: 1px solid $light-blue-color;
 }
@@ -156,8 +166,8 @@ ul.social {
     border-bottom: 0;
     border-left: 0;
     font-size: 1.2em;
-    height: 50px;
-    line-height: 50px;
+    height: 40px;
+    line-height: 40px;
 }
 
 .social a:hover {
@@ -169,8 +179,8 @@ a.icon-search {
     float: left;
     text-align: center;
     width: 25%;
-    height: 100px;
-    line-height: 100px;
+    height: 80px;
+    line-height: 80px;
     text-decoration: none;
     font-size: 1.5em;
 }
@@ -180,8 +190,6 @@ a.icon-search:hover {
 }
 
 .work-box {
-    width: 33.3%;
-    float: left;
     padding: 0 0.3%;
     margin: 0 0 40px 0
 }
@@ -217,6 +225,33 @@ a.icon-search:hover {
     width: 100%;
 }
 
+////// FOOTER ///////
+
+footer {
+    border-top: 2px solid $orange-color;
+    width: 100%;
+}
+
+@media screen and (min-width: 48.25em) {
+    body {
+        padding-top: 10px;
+    }
+
+    #logo {
+        font-size: 5em;
+    }
+
+    .work-box {
+        width: 33.3%;
+        float: left;
+    }
+
+    [role=menu] li {
+        float: left;
+        line-height: 80px;
+        padding: 0 10px;
+    }
+}
 
 
 
